--- a/view/default/image/desktop.css
+++ b/view/default/image/desktop.css
@@ -28,3 +28,13 @@
 	margin:7px;
 	color:#fe6565;
 }
+
+.messagebox{
+	width:470px;
+}
+
+
+.popup_message{
+	width:500px;
+	height:350px;
+}
